--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "secret-page",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "nf start"
+  },
   "dependencies": {
-    "express": "~3.3.4"
+    "compression": "^1.7.4",
+    "express": "^4.17.3",
+    "morgan": "1.^10.0"
+  },
+  "devDependencies": {
+    "foreman": "~2.0.0"
   }
 }
