--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.3",
+    "express-basic-auth": "^1.2.1",
     "morgan": "1.10.0"
   },
   "devDependencies": {
