--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "morgan": "1.10.0"
   },
   "devDependencies": {
-    "foreman": "~2.0.0"
+    "foreman": "^3.0.1"
   },
   "engines": {
     "node": "16.x"
